--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="ontaula"></div>
         <!-- Boto per iniciar la funcio de crear la taula -->
         <button type="button" onclick="inicialitzaJoc()">Inicia joc!</button><br><br>
+        <div id="perds" style="display:none">Has perdut cap de suro!</div>
     </body>
     <script src="mines.js"></script>
 </html>
