--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- Boto per iniciar la funcio de crear la taula -->
         <button type="button" onclick="inicialitzaJoc()">Inicia joc!</button><br><br>
         <div id="perds" style="display:none">Has perdut cap de suro!</div>
+        <div id="guanyes" style="display:none">Felicitats, has guanyat al buscamines!</div>
     </body>
     <script src="mines.js"></script>
 </html>
